<?xml version="1.0"?>
<package format="2">
  <name>sensor_model_plugins</name>
  <version>0.0.0</version>
  <description>The sensor_model_plugins package</description>
  <maintainer email="maintainer@squarerobots.com">maintainer</maintainer>
  <author email="dmcgann@squarerobots.com">Dan McGann</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>utbot_msgs</depend>

  <export>
    <sensor_model_plugins plugin="${prefix}/sensor_model_plugins.xml" />
  </export>
</package>
